# ethereum_ssz

./: Cargo.toml
ssz/: Cargo.toml
ssz/examples/: large_list.rs  large_list_of_structs.rs  struct_definition.rs
ssz/src/: decode.rs  encode.rs  legacy.rs  lib.rs
ssz/src/decode/: impls.rs
ssz/src/encode/: impls.rs
ssz/tests/: four_byte_option_impl.rs  tests.rs
ssz_derive/: Cargo.toml
ssz_derive/src/: lib.rs
ssz_derive/tests/: tests.rs
