[package]
name = "ethereum_ssz"
version = "0.5.3"
edition = "2021"
description = "SimpleSerialize (SSZ) as used in Ethereum"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/sigp/ethereum_ssz"
documentation = "https://docs.rs/ethereum_ssz"
keywords = ["ethereum"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "ssz"

[dev-dependencies]
ethereum_ssz_derive = { version = "0.5.3", path = "../ssz_derive" }
ethereum-types = { version = "0.14.1" }
ssz_types = { git = "https://github.com/unionlabs/ssz_types", branch = "try-from-instead-of-from" }

[dependencies]
ethereum-types = { version = "0.14.1", default-features = false }
smallvec = { version = "1.6.1", features = ["const_generics"] }
itertools = "0.10.3"
ssz_derive = { package = "ethereum_ssz_derive", path = "../ssz_derive" }

[features]
arbitrary = ["ethereum-types/arbitrary"]
